--- a/bootstrapPortfolio.html
+++ b/bootstrapPortfolio.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <!--CSS Link-->
-    <link rel="stylesheet" href="css\bootstrapPortfolio.css" />
+    <link rel="stylesheet" href="bootstrapPortfolio.css" />
 
     <!--Animation on Scroll-->
     <link
