--- a/bootstrapPortfolio.html
+++ b/bootstrapPortfolio.html
@@ -43,19 +43,19 @@
             <a
               class="nav-link active mx-5 text-black"
               aria-current="page"
-              href="#"
+              href="#home"
               >Home</a
             >
-            <a class="nav-link active mx-5 text-black" href="#">Features</a>
-            <a class="nav-link active mx-5 text-black" href="#">About me</a>
-            <a class="nav-link active mx-5 text-black">Contact</a>
+            <a class="nav-link active mx-5 text-black" href="#features">Features</a>
+            <a class="nav-link active mx-5 text-black" href="#aboutMe">About me</a>
+            <a class="nav-link active mx-5 text-black" href="#contact">Contact</a>
           </div>
         </div>
       </div>
     </nav>
 
     <!--Image-->
-    <div class="container mt-5"  data-aos="fade-up">
+    <div class="container mt-5"  id="home" data-aos="fade-up">
       <div class="row">
         <div class="col-md-4">
           <img src="img\profile.jpg" class="img-fluid" alt="Image" />
@@ -83,7 +83,7 @@
       </div>
     </div>
     <!--Features-->
-    <div class="container" style="margin-top: 150px" data-aos="fade-left">
+    <div class="container" id="features" style="margin-top: 150px" data-aos="fade-left">
       <div class="row">
         <div class="col-md-4 mx-auto">
           <h1 class="display-5 text-info">Some of my Works</h1>
@@ -162,7 +162,7 @@
     </div>
 
     <!--About me-->
-    <div class="container" style="margin-top: 150px" data-aos="fade-right">
+    <div class="container" id="aboutMe" style="margin-top: 150px" data-aos="fade-right">
       <div class="row">
         <div class="d-flex align-items-center justify-content-center">
           <h1 class="display-5 text-info">About me</h1>
@@ -209,7 +209,7 @@
     </div>
 
     <!--Contact-->
-    <div class="container" style="margin-top: 150px" data-aos="fade-down-right">
+    <div class="container" id="contact" style="margin-top: 150px" data-aos="fade-down-right">
       <div class="row">
         <div class="d-flex align-items-center justify-content-center">
           <h1 class="display-5 text-info">Contact me on:</h1>
